objects/vlocity_cmt__OfferMigrationPlan__c.object
<CustomObject>
    <description>This object defines the Offer Migration Plan to support migration from existing Offers to other Offers.</description>
    <fields>
        <fullName>vlocity_cmt__AccountScope__c</fullName>
        <description>For CMT 104 release, Account Scope value would always be Same Customer.</description>
        <label>Account Scope</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Account</fullName>
                    <default>true</default>
                    <label>Same Account</label>
                </value>
                <value>
                    <fullName>Same Value2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BusinessReason__c</fullName>
        <description>The purpose of having this field is to generate business operational reports. Users can add values accordingly here.</description>
        <label>Business Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <description>This field is used to describe why Offer Migration Plan is created.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <description>This datetime field is used to set end datetime for given Offer Migration Plan.</description>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <description>This datetime field is used to set start datetime for given Offer Migration Plan.</description>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MigrationMethod__c</fullName>
        <description>This is used to display migration offers during CPQ. If Any to Any value is selected, corresponding component mappings will be excluded. If Specific Offers value is selected, corresponding componenet mapping will be included only</description>
        <label>Migration Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Any to Any Offers</fullName>
                </value>
                <value>
                    <fullName>Specific Offers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductFamily__c</fullName>
        <description>This picklist field can be subset or complete set of Product2 Family field. Users have to make sure of that.</description>
        <label>Product Family</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Broadband</fullName>
                </value>
                <value>
                    <fullName>Fixed Line</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Multiplay</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Wireless Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Any Migration Plan is consider during runtime only if its set to Active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Offer Migration Plan</label>
    <nameField>
        <label>Offer Migration Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Migration Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__EffectiveStart_Greater_EffectiveEnd</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__EffectiveStartDate__c  &gt;  vlocity_cmt__EffectiveEndDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__EffectiveEndDate__c</errorDisplayField>
        <errorMessage>Effective End Date should be greater than or equal to Effective Start Date.</errorMessage>
    </validationRules>
</CustomObject>